# pyqt5-3way-classifier

./: README.md  main.py  setup.cfg
cand_viewer/: app.py  cli.py  view.py
src/: app.py  view.py
