[metadata]
name = cand_viewer
version = 1.0.0

[options]
zip_safe = false
include_package_data = false
packages = find:
python_requires = >=3.8
install_requires =
    pandas
    PyQt5<5.13
    pyqtwebengine<5.13
    click
    rich

[options.entry_points]
console_scripts =
    cand_viewer = cand_viewer.cli:main

[flake8]
ignore =
    I, D, Q, C81, W503, BLK100, E203, RST210
    # WPS
    WPS100, WPS110, WPS114
    WPS210, WPS216, WPS220, WPS237,
    WPS305, WPS323, WPS338, WPS339, WPS345, WPS352, WPS362
    WPS420, WPS432, WPS440, WPS441,
    WPS519,
    WPS602,
    # bandit
    S101, S105, S404, S602, S607,

exclude = .git, .eggs, __pycache__, docs/, old/, build/, dist/
max-line-length = 127
